--- a/home/.editorconfig
+++ b/home/.editorconfig
@@ -33,3 +33,7 @@ trim_trailing_whitespace = true
 # Denotes whether file should end with a newline
 # Possible values: true, false
 insert_final_newline = true
+
+# Makefile
+[Makefile]
+indent_style = tab
